# yesod-rest-framework

./: LICENSE  README.md
PoC/openapi-generator/example/: .gitignore  package.yaml  stack.yaml
PoC/openapi-generator/example/config/: models.persistentmodels  routes
PoC/openapi-generator/example/src/: Application.hs  Foundation.hs
PoC/openapi-generator/example/src/Handler/: Pet.hs
PoC/openapi-generator/example/src/Import/: NoFoundation.hs
PoC/openapi-generator/yesod-rest-framework/: stack.yaml  yesod-rest-framework.cabal
PoC/openapi-generator/yesod-rest-framework/src/OpenAPI3/: Schema.hs  TH.hs
PoC/openapi-generator/yesod-rest-framework/src/Yesod/OpenAPI/: Helper.hs  TH.hs
PoC/openapi-generator/yesod-rest-framework/src/Yesod/OpenAPI/Parser/: Common.hs  Models.hs  Routes.hs
PoC/openapi-generator/yesod-rest-framework/test/Yesod/OpenAPI/: HelperSpec.hs
PoC/openapi-generator/yesod-rest-framework/test/Yesod/OpenAPI/Parser/: ModelsSpec.hs  RoutesSpec.hs
PoC/openapi-generator/yesod-rest-framework/test/doctest/: doctest-driver.hs
PoC/restapi-generator/example/: .gitignore  package.yaml  stack.yaml
PoC/restapi-generator/example/config/: models.persistentmodels  routes
PoC/restapi-generator/example/src/: Application.hs  Foundation.hs
PoC/restapi-generator/example/src/Handler/: Book.hs  Hello.hs  Pet.hs
PoC/restapi-generator/yesod-rest-framework/: README.md  yesod-rest-framework.cabal
PoC/restapi-generator/yesod-rest-framework/src/Yesod/: REST.hs
PoC/restapi-generator/yesod-rest-framework/src/Yesod/REST/: TH.hs
