name:                yesod-rest-framework
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/yesod-rest-framework#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Lib
      OpenAPI3.Schema
      OpenAPI3.TH
      Yesod.OpenAPI.Helper
      Yesod.OpenAPI.TH
      Yesod.OpenAPI.Parser.Common
      Yesod.OpenAPI.Parser.Models
      Yesod.OpenAPI.Parser.Routes
  build-depends:
      base >= 4.7 && < 5
    , bytestring
    , containers
    , parsec
    , template-haskell
    , text
    , aeson
    , yaml
    , yesod
    , yesod-core
    , Plural
  default-language:    Haskell2010

test-suite yesod-rest-framework-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Yesod.OpenAPI.HelperSpec
      Yesod.OpenAPI.Parser.ModelsSpec
      Yesod.OpenAPI.Parser.RoutesSpec
      Paths_yesod_rest_framework
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , containers
    , hspec
    , yesod-rest-framework
  default-language: Haskell2010

test-suite yesod-rest-framework-doctest
  type: exitcode-stdio-1.0
  main-is: doctest-driver.hs
  other-modules:
      Paths_yesod_rest_framework
  hs-source-dirs:
      test/doctest
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , doctest
    , yesod-rest-framework
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yesod-rest-framework
