name:                yesod-rest-framework
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/yesod-rest-framework#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Lib
      Yesod.REST
      Yesod.REST.TH
  build-depends:
      base >= 4.7 && < 5
    , template-haskell
    , text
    , yesod
    , yesod-core
    , yesod-persistent
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yesod-rest-framework
